--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Self-advocates in China</h1>
-<p>Welcome to CNUSP:the platform of the users and survivors of psychiatry to defense their rights!</p>
+<h1>项目管理培训 和 模板分享仓库</h1>
+<br>
+<p>陆续上架中……</p>
+<br>
+<p>您对我们的项目管理有何需求和意见，欢迎联系：linusyeung at live dot com</p>
 </body>
 </html>
