--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>项目管理培训 和 模板分享仓库</h1>
+<h1>This is Linus Yang's notes</h1>
 <br>
-<p>陆续上架中……</p>
+<p>Feel free to have a look here or inside my github.</p>
 <br>
-<p>您对我们的项目管理有何需求和意见，欢迎联系：linusyeung at live dot com</p>
+<p>Contact:linusyeung at live dot com</p>
 </body>
 </html>
